--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -12,6 +12,7 @@
         android:layout_width="251dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
+        android:textAlignment="center"
         android:text="@string/alreadyHaveAccount"
         app:layout_constraintBottom_toTopOf="@+id/navSignIn"
         app:layout_constraintEnd_toEndOf="parent"
