--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,15 @@
                 android:minHeight="?attr/actionBarSize"
                 app:title=""
                 app:menu="@menu/top_app_bar"
-                app:navigationIcon="@drawable/ic_home_black_24dp" />
+                app:navigationIcon="@drawable/ic_back_black_24dp" />
         </com.google.android.material.appbar.AppBarLayout>
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <!-- Scrollable content -->
+
         </androidx.core.widget.NestedScrollView>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
