configured a customer toolbar from material 3

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
-                app:title=""
+                app:title="Hungry"
                 app:menu="@menu/top_app_bar"
                 app:navigationIcon="@drawable/ic_back_black_24dp" />
         </com.google.android.material.appbar.AppBarLayout>
