--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,12 +7,12 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_order"
         android:icon="@drawable/ic_order_black_24dp"
         android:title="@string/title_order" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_pay"
         android:icon="@drawable/ic_pay_black_24dp"
         android:title="@string/title_pay" />
 
